--- a/index.html
+++ b/index.html
@@ -28,11 +28,84 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <main class="container">
       <!-- Timeblocks go here -->
-    </div>
+      <!-- 9AM Begin -->
+      <div>
+        <h4 class = "card">
+          9AM
+        </h4>
+        <ul></ul>
+      </div>
+      <!-- 9AM end -->  
+
+        <!-- 10AM Begin -->
+        <div>
+          <h4>
+            10AM
+          </h4>
+        </div>
+        <!-- 10AM end -->  
+
+          <!-- 11AM Begin -->
+      <div>
+        <h4>
+          11AM
+        </h4>
+      </div>
+      <!-- 11AM end -->  
+
+        <!-- 12PM Begin -->
+        <div>
+          <h4>
+            12PM
+          </h4>
+        </div>
+        <!-- 12PM end -->  
+
+      <!-- 1PM Begin -->
+      <div>
+        <h4>
+          1PM
+        </h4>
+      </div>
+      <!-- 1PM end -->  
+
+      <!-- 2PM Begin -->
+      <div>
+        <h4>
+          2PM
+        </h4>
+      </div>
+      <!-- 2PM end -->  
+
+      <!-- 3PM Begin -->
+      <div>
+        <h4>
+          3PM
+        </h4>
+      </div>
+      <!-- 3PM end -->  
+
+      <!-- 4PM Begin -->
+      <div>
+        <h4>
+          4PM
+        </h4>
+      </div>
+      <!-- 4PM end -->  
+
+      <!-- 5PM Begin -->
+      <div>
+        <h4>
+          5PM
+        </h4>
+      </div>
+      <!-- 5PM end -->  
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
