format looks similar to example

--- a/index.html
+++ b/index.html
@@ -31,75 +31,92 @@
     <main class="container">
       <!-- Timeblocks go here -->
       <!-- 9AM Begin -->
-      <div>
-        <h4 class = "card">
-          9AM
+      <div id="block" class="row">
+        <h4 class="hour">
+            9AM
         </h4>
-        <ul></ul>
+        <input class="textarea time-block list-group col" type="text">
+            <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 9AM end -->  
 
         <!-- 10AM Begin -->
-        <div>
-          <h4>
-            10AM
+        <div id="block" class="row">
+          <h4 class="hour">
+          10AM
           </h4>
+          <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
         </div>
         <!-- 10AM end -->  
 
           <!-- 11AM Begin -->
-      <div>
-        <h4>
+      <div id="block" class="row">
+        <h4 class="hour">
           11AM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 11AM end -->  
 
         <!-- 12PM Begin -->
-        <div>
-          <h4>
-            12PM
+        <div id="block" class="row">
+          <h4 class="hour">
+          12PM
           </h4>
+          <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
         </div>
         <!-- 12PM end -->  
 
       <!-- 1PM Begin -->
-      <div>
-        <h4>
-          1PM
+      <div id="block" class="row">
+        <h4 class="hour">
+            1PM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 1PM end -->  
 
       <!-- 2PM Begin -->
-      <div>
-        <h4>
-          2PM
+      <div id="block" class="row">
+        <h4 class="hour">
+            2PM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 2PM end -->  
 
       <!-- 3PM Begin -->
-      <div>
-        <h4>
-          3PM
+      <div id="block" class="row">
+        <h4 class="hour">
+            3PM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 3PM end -->  
 
       <!-- 4PM Begin -->
-      <div>
-        <h4>
-          4PM
+      <div id="block" class="row">
+        <h4 class="hour">
+            4PM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 4PM end -->  
 
       <!-- 5PM Begin -->
-      <div>
-        <h4>
-          5PM
+      <div id="block" class="row">
+        <h4 class="hour">
+            5PM
         </h4>
+        <input class="textarea time-block list-group col" type="text">
+          <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 5PM end -->  
     </main>
