background color changes with time

--- a/index.html
+++ b/index.html
@@ -31,91 +31,91 @@
     <main class="container">
       <!-- Timeblocks go here -->
       <!-- 9AM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             9AM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="09" class="textarea time-block list-group col" type="text">
             <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 9AM end -->  
 
         <!-- 10AM Begin -->
-        <div id="block" class="row">
+        <div id="block" class="row time-block">
           <h4 class="hour">
           10AM
           </h4>
-          <input class="textarea time-block list-group col" type="text">
+          <input id="10" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
         </div>
         <!-- 10AM end -->  
 
           <!-- 11AM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
           11AM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="11" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 11AM end -->  
 
         <!-- 12PM Begin -->
-        <div id="block" class="row">
+        <div id="block" class="row time-block">
           <h4 class="hour">
           12PM
           </h4>
-          <input class="textarea time-block list-group col" type="text">
+          <input id="12" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
         </div>
         <!-- 12PM end -->  
 
       <!-- 1PM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             1PM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="13" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 1PM end -->  
 
       <!-- 2PM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             2PM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="14" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 2PM end -->  
 
       <!-- 3PM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             3PM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="15" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 3PM end -->  
 
       <!-- 4PM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             4PM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="16" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 4PM end -->  
 
       <!-- 5PM Begin -->
-      <div id="block" class="row">
+      <div id="block" class="row time-block">
         <h4 class="hour">
             5PM
         </h4>
-        <input class="textarea time-block list-group col" type="text">
+        <input id="17" class="textarea time-block list-group col" type="text">
           <button type="button" class="saveBtn">Save</button>
       </div>
       <!-- 5PM end -->  
